ensures footer text is not overlapped by content menu

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ body>footer {
     right: 0;
     bottom: 0;
     text-align: left;
+    padding-right: 140px;
 }
 
 iframe {
